gcc/testsuite/gdc.test/fail_compilation/fail78.d
/*
TEST_OUTPUT:
---
fail_compilation/fail78.d(9): Error: undefined identifier `inch`
---
*/

auto yd = ft * 3;
auto ft = inch * 12;

